# FusionServer

./: .gitignore  AlgorithmServer.pro  CMakeLists.txt  ImageFusion  ImageFusion.pro  Makefile  README.md
conf/: configure.json  configure_duc.json  rpcrun.sh  start_server.sh
main/: Makefile  Server.cpp  Server.h  imagefusion.cpp  imagefusion.h  imagequality.cpp  imagequality.cpp.autosave  imagequality.h  imageretrieve.cpp  imageretrieve.h  imagerpci.cpp  imagerpci.h
main/conf/: configure.json
main/data/: README.md
main/data/img/: 5.hdr  5.tif  6.hdr
main/data/serialize/: README.md  task.json
main/src/algorithm/fusion/: BroveyFusion.cpp  BroveyFusion.h  CurveletFusion.cpp  CurveletFusion.h  DWTFusion.cpp  DWTFusion.h  Fusion.cpp  Fusion.h  Fusion.hpp  GdalInf.h  GramSchmidtFusion.cpp  GramSchmidtFusion.h  HCS.cpp  HCS.h  HCSFusion.cpp  HCSFusion.h  HSI.cpp  HSI.h  HSIFusion.cpp  HSIFusion.h  PCA.cpp  PCA.h  PCAFusion.cpp  PCAFusion.h  PgInf.cpp  PgInf.h  Tools.cpp  Tools.h  WT.h
main/src/algorithm/fusion/curvelet/: fdct_wrapping.cpp  nummat.hpp  numvec.hpp  offmat.hpp
main/src/algorithm/fusion/curvelet/fftw/: malloc.cpp
main/src/algorithm/fusion/gdal/include/: cpl_config.h  gdal_alg_priv.h
main/src/algorithm/fusion/utils/: fusionutils.cpp  fusionutils.h
main/src/algorithm/quality/src/: Clarity.cpp  ContrastRatio.cpp  Entropy.cpp  Mean.cpp  SignaltoNoiseRatio.cpp  Striperesidual.cpp
main/src/algorithm/quality/utils/: qualityUtils.h  qualityutils.cpp  qualityutils.h
main/src/algorithm/retrieve/ASIFT/: ASIFT_Extraction.h  GdalIO.h  demo_ASIFT.cpp  demo_lib_sift.cpp  extract_feature.cpp  extract_feature.h  orsa.h
main/src/algorithm/retrieve/detect/: ImageTest.py  ReadCsvFile.h  SR.h  Vec.h
main/src/algorithm/retrieve/utils/: retrieveutils.cpp  retrieveutils.h
main/src/others/: Example.cpp  detectDemo.cpp
main/src/others/ImageRetrieve/: init_database.py
main/src/rpc/: qualityjudgeRpc.h  qualityjudgeRpc.ice  wisefuseRpc.cpp  wisefuseRpc.h  wisefuseRpc.ice
main/src/rpc/quality/: qualityjudgeRpc.cpp
main/src/rpc/retrieve/: ImageRpc.cpp  ImageRpc.h  ImageRpc.ice
main/src/test/: run.sh  threadpool_test.cpp
main/src/threadpool/: Makefile  Mutex.cpp  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
main/src/utils/: readconf.cpp  utils.cpp  utils.h  utils.hpp
script/: Main.cpp  PrintToDB.cpp  PrintToDB.h  SearchFusionFile.h  pgdb.cpp  pgdb.h
source/: imagefusion.cpp  imagefusion.h  imagequality.cpp  imagequality.h  server.cpp  server.h
source/algorithm/fusion/: BroveyFusion.cpp  BroveyFusion.h  CurveletFusion.cpp  CurveletFusion.h  DWTFusion.cpp  DWTFusion.h  Fusion.cpp  GdalInf.cpp  GdalInf.h  GramSchmidtFusion.cpp  GramSchmidtFusion.h  HCS.cpp  HCS.h  HCSFusion.cpp  HCSFusion.h  HSI.cpp  HSI.h  HSIFusion.cpp  HSIFusion.h  PCA.cpp  PCA.h  PCAFusion.cpp  PCAFusion.h  PgInf.cpp  PgInf.h  Tools.cpp  Tools.h  WT.h
source/algorithm/fusion/curvelet/: fdct_wrapping.cpp  fdct_wrapping_inc.hpp  fdct_wrapping_inline.hpp  ifdct_wrapping.cpp  nummat.hpp  numvec.hpp  offmat.hpp  offvec.hpp
source/algorithm/fusion/curvelet/fftw/: config.cpp  config.h  executor.cpp  fftw.h  fftw_int.h  fftwf77.cpp  fftwnd.cpp  fn_1.cpp  fn_10.cpp  fn_11.cpp  fn_12.cpp  fn_13.cpp  fn_14.cpp  fn_15.cpp  fn_16.cpp  fn_2.cpp  fn_3.cpp  fn_32.cpp  fn_4.cpp  fn_5.cpp  fn_6.cpp  fn_64.cpp  fn_7.cpp  fn_8.cpp  fn_9.cpp  fni_1.cpp  fni_10.cpp  fni_11.cpp  fni_12.cpp  fni_13.cpp  fni_14.cpp  fni_15.cpp  fni_16.cpp  fni_2.cpp  fni_3.cpp  fni_32.cpp  fni_4.cpp  fni_5.cpp  fni_6.cpp  fni_64.cpp  (+36 more)
source/algorithm/fusion/utils/: fusionutils.cpp  fusionutils.h
source/algorithm/quality/src/: clarity.cpp  comprehensiveEvaluate.cpp  contrastRatio.cpp  crossEntropy.cpp  dynamicrange.cpp  entropy.cpp  mean.cpp  mutualinformation.cpp  radiationUniform.cpp  signaltoNoiseRatio.cpp  spectralanglematrix.cpp  striperesidual.cpp  structuresimilarity.cpp  variance.cpp
source/algorithm/quality/utils/: qualityutils.cpp  qualityutils.h
source/algorithm/thumb/: imagethumb.cpp  imagethumb.h
source/rpc/fusion/: wisefuseRpc.cpp  wisefuseRpc.h  wisefuseRpc.ice
source/rpc/quality/: qualityjudgeRpc.cpp  qualityjudgeRpc.h  qualityjudgeRpc.ice
source/threadpool/: mutex.cpp  mutex.h  task.cpp  task.h  threadpool.cpp  threadpool.h
source/utils/: jsoncpp.cpp  log.cpp  log.h  utils.cpp  utils.h
source/utils/json/: json-forwards.h  json.h
