cmake_minimum_required(VERSION 3.5)
project(AlgorithmServer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories("/usr/local/include")
link_directories("/usr/local/lib")
set(SOURCE_FILES source/imagefusion.cpp
        source/imagefusion.h
        source/imagequality.cpp
        source/imagequality.h
        source/server.h
        source/server.cpp
        source/utils/log.cpp
        source/utils/log.h
        source/utils/utils.cpp
        source/utils/utils.h
        source/utils/jsoncpp.cpp
        source/utils/json/json.h
        source/utils/json/json-forwards.h
        source/threadpool/mutex.cpp
        source/threadpool/mutex.h
        source/threadpool/task.cpp
        source/threadpool/task.h
        source/threadpool/threadpool.cpp
        source/threadpool/threadpool.h
        source/rpc/fusion/wisefuseRpc.cpp
        source/rpc/fusion/wisefuseRpc.h
        source/rpc/quality/qualityjudgeRpc.cpp
        source/rpc/quality/qualityjudgeRpc.h
        source/algorithm/quality/utils/qualityutils.cpp
        source/algorithm/quality/utils/qualityutils.h
        source/algorithm/quality/src/clarity.cpp
        source/algorithm/quality/src/contrastRatio.cpp
        source/algorithm/quality/src/clarity.cpp
        source/algorithm/quality/src/entropy.cpp
        source/algorithm/quality/src/mean.cpp
        source/algorithm/quality/src/signaltoNoiseRatio.cpp
        source/algorithm/quality/src/striperesidual.cpp
        source/algorithm/fusion/Fusion.cpp
        source/algorithm/fusion/BroveyFusion.cpp
        source/algorithm/fusion/BroveyFusion.h
        source/algorithm/fusion/CurveletFusion.cpp
        source/algorithm/fusion/CurveletFusion.h
        source/algorithm/fusion/DWTFusion.cpp
        source/algorithm/fusion/DWTFusion.h
        source/algorithm/fusion/GdalInf.cpp
        source/algorithm/fusion/GdalInf.h
        source/algorithm/fusion/GramSchmidtFusion.cpp
        source/algorithm/fusion/GramSchmidtFusion.h
        source/algorithm/fusion/HCS.cpp
        source/algorithm/fusion/HCS.h
        source/algorithm/fusion/HCSFusion.cpp
        source/algorithm/fusion/HCSFusion.h
        source/algorithm/fusion/HSI.cpp
        source/algorithm/fusion/HSI.h
        source/algorithm/fusion/HSIFusion.cpp
        source/algorithm/fusion/HSIFusion.h
        source/algorithm/fusion/PCA.cpp
        source/algorithm/fusion/PCA.h
        source/algorithm/fusion/PCAFusion.cpp
        source/algorithm/fusion/PCAFusion.h
        source/algorithm/fusion/PgInf.cpp
        source/algorithm/fusion/PgInf.h
        source/algorithm/fusion/Tools.cpp
        source/algorithm/fusion/Tools.h
        source/algorithm/fusion/WT.h
        source/algorithm/fusion/utils/fusionutils.cpp
        source/algorithm/fusion/utils/fusionutils.h
        source/algorithm/fusion/curvelet/fdct_wrapping_inc.hpp
        source/algorithm/fusion/curvelet/fdct_wrapping.hpp
        source/algorithm/fusion/curvelet/fdct_wrapping.cpp
        source/algorithm/fusion/curvelet/fdct_wrapping_inline.hpp
        source/algorithm/fusion/curvelet/fdct_wrapping_param.cpp
        source/algorithm/fusion/curvelet/ifdct_wrapping.cpp
        source/algorithm/fusion/curvelet/nummat.hpp
        source/algorithm/fusion/curvelet/numvec.hpp
        source/algorithm/fusion/curvelet/offmat.hpp
        source/algorithm/fusion/curvelet/offvec.hpp
        source/algorithm/fusion/curvelet/fftw/config.cpp
        source/algorithm/fusion/curvelet/fftw/config.h
        source/algorithm/fusion/curvelet/fftw/executor.cpp
        source/algorithm/fusion/curvelet/fftw/fftw_int.h
        source/algorithm/fusion/curvelet/fftw/fftw.h
        source/algorithm/fusion/curvelet/fftw/fftwf77.cpp
        source/algorithm/fusion/curvelet/fftw/fftwnd.cpp
        source/algorithm/fusion/curvelet/fftw/fn_1.cpp
        source/algorithm/fusion/curvelet/fftw/fn_10.cpp
        source/algorithm/fusion/curvelet/fftw/fn_11.cpp
        source/algorithm/fusion/curvelet/fftw/fn_12.cpp
        source/algorithm/fusion/curvelet/fftw/fn_13.cpp
        source/algorithm/fusion/curvelet/fftw/fn_14.cpp
        source/algorithm/fusion/curvelet/fftw/fn_15.cpp
        source/algorithm/fusion/curvelet/fftw/fn_16.cpp
        source/algorithm/fusion/curvelet/fftw/fn_2.cpp
        source/algorithm/fusion/curvelet/fftw/fn_3.cpp
        source/algorithm/fusion/curvelet/fftw/fn_32.cpp
        source/algorithm/fusion/curvelet/fftw/fn_4.cpp
        source/algorithm/fusion/curvelet/fftw/fn_5.cpp
        source/algorithm/fusion/curvelet/fftw/fn_6.cpp
        source/algorithm/fusion/curvelet/fftw/fn_64.cpp
        source/algorithm/fusion/curvelet/fftw/fn_7.cpp
        source/algorithm/fusion/curvelet/fftw/fn_8.cpp
        source/algorithm/fusion/curvelet/fftw/fn_9.cpp
        source/algorithm/fusion/curvelet/fftw/fni_1.cpp
        source/algorithm/fusion/curvelet/fftw/fni_10.cpp
        source/algorithm/fusion/curvelet/fftw/fni_11.cpp
        source/algorithm/fusion/curvelet/fftw/fni_12.cpp
        source/algorithm/fusion/curvelet/fftw/fni_13.cpp
        source/algorithm/fusion/curvelet/fftw/fni_14.cpp
        source/algorithm/fusion/curvelet/fftw/fni_15.cpp
        source/algorithm/fusion/curvelet/fftw/fni_16.cpp
        source/algorithm/fusion/curvelet/fftw/fni_2.cpp
        source/algorithm/fusion/curvelet/fftw/fni_3.cpp
        source/algorithm/fusion/curvelet/fftw/fni_32.cpp
        source/algorithm/fusion/curvelet/fftw/fni_4.cpp
        source/algorithm/fusion/curvelet/fftw/fni_5.cpp
        source/algorithm/fusion/curvelet/fftw/fni_6.cpp
        source/algorithm/fusion/curvelet/fftw/fni_64.cpp
        source/algorithm/fusion/curvelet/fftw/fni_7.cpp
        source/algorithm/fusion/curvelet/fftw/fni_8.cpp
        source/algorithm/fusion/curvelet/fftw/fni_9.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_10.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_16.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_2.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_3.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_32.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_4.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_5.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_6.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_64.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_7.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_8.cpp
        source/algorithm/fusion/curvelet/fftw/ftw_9.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_10.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_16.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_2.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_3.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_32.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_4.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_5.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_6.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_64.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_7.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_8.cpp
        source/algorithm/fusion/curvelet/fftw/ftwi_9.cpp
        source/algorithm/fusion/curvelet/fftw/generic.cpp
        source/algorithm/fusion/curvelet/fftw/malloc.cpp
        source/algorithm/fusion/curvelet/fftw/planner.cpp
        source/algorithm/fusion/curvelet/fftw/putils.cpp
        source/algorithm/fusion/curvelet/fftw/rader.cpp
        source/algorithm/fusion/curvelet/fftw/timer.cpp
        source/algorithm/fusion/curvelet/fftw/twiddle.cpp
        source/algorithm/fusion/curvelet/fftw/wisdom.cpp
        source/algorithm/fusion/curvelet/fftw/wisdomio.cpp)

add_executable(AlgorithmServer ${SOURCE_FILES})
target_link_libraries(AlgorithmServer Ice IceUtil gdal proj pthread)
